Implement tree view of log entry groups, initial commit